# neutrino.app

./: .gitignore  Dockerfile.combined  README.md  docker-compose-dev.yml  docker-compose.nginx.yml  docker-compose.yml  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.github/workflows/: ghcr-publish.yml
agent_docs/: DeploymentPlan.md
agent_docs/Backend/: Backend-Design-Guide.md  RustCompanionGuide.md  Tech-Stack.md
agent_docs/Product/: DriveFeatures.md  UI-Foundation-Plan.md  face-detect-roadmap.md  feature-map.md  google-drive-features.md  roadmap.md
agent_docs/UI-UX/: UI-UX-Design-Guide.md  UIComponentStandards.md  (+1 more)
apps/: .npmrc  Dockerfile  neutrino-proxy-dev.conf  neutrino-proxy.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
backend/: .env  .env.example  Cargo.toml  Dockerfile
backend/auth/: Cargo.toml
backend/auth/migrations/2025-01-01-000001_create_refresh_tokens/: up.sql
backend/auth/migrations/2025-01-01-000002_add_user_security/: down.sql  up.sql
backend/auth/migrations/2025-01-01-000003_add_session_device_info/: up.sql
backend/auth/src/: main.rs  schema.rs
backend/auth/src/auth/: api.rs  dto.rs  mod.rs  repository.rs  service.rs  tokens.rs  totp.rs
backend/auth/src/common/: auth_extractor.rs  mod.rs
backend/auth/src/config/: mod.rs
backend/auth/src/shared/: auth_extractor.rs  errors.rs
backend/photos/: Cargo.toml
backend/photos/migrations/2025-01-01-000001_create_photos/: up.sql
backend/photos/migrations/2025-01-01-000002_create_albums/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000003_create_jobs/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000004_add_photo_metadata/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000005_thumbnail_as_text/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000006_create_faces/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000007_create_persons/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000008_add_person_name/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000009_create_face_suggestions/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000010_create_training_signals/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000011_create_user_recognition_thresholds/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000012_phase7_albums_smart/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000013_create_photo_edits/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000013_move_thumbnail_to_files/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000014_create_locked_folder_settings/: down.sql  up.sql
backend/photos/migrations/2025-01-01-000015_add_is_locked_to_photos/: up.sql
backend/photos/migrations/2025-01-01-000016_add_strip_gps_to_photos/: down.sql  up.sql
backend/photos/src/: main.rs  schema.rs
backend/photos/src/albums/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/photos/src/common/: auth_client.rs  errors.rs
backend/photos/src/config/: mod.rs
backend/photos/src/faces/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/photos/src/learning/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/photos/src/persons/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/photos/src/photos/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/photos/src/suggestions/: api.rs  dto.rs  model.rs  repository.rs  service.rs
backend/shared/: Cargo.toml
backend/shared/src/: api_error.rs  drive_client.rs  errors.rs  lib.rs  logger.rs  permissions.rs
backend/shared/src/auth/: client.rs  extractor.rs  mod.rs  tokens.rs
backend/shared/src/config/: mod.rs  slides.rs
backend/worker/: Cargo.toml
backend/worker/src/: config.rs  drive_client.rs  face_cluster.rs  face_detect.rs  face_recognize.rs  index_content.rs  main.rs  metadata.rs  thumbnail.rs
nginx/: neutrino-proxy.conf
secrets/: anthropic_api_key.txt  jwt_secret.txt  worker_secret.txt
(+389 files in other folders)
