[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
hex = "0.4"
