[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
# env_logger = "0.11"
# log = "0.4"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features=["time", "env-filter"]}
tracing-appender = "0.2.4"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
