[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = "2"
hex = "0.4"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# env_logger = "0.11"
# log = "0.4"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features=["time", "env-filter"]}
tracing-appender = "0.2.4"
