[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1.44"
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
insightface = "0.0.3"
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16"
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }
